--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div class="container">
         <div class="all_header">
             <div class="header">
-                <img src="./pat.jpg" alt="Profile Image">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/54/Seljuk_Empire.png" alt="Profile Image">
                
             </div>
             <div class="contact">
